--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ Articles des MMIA1
     <!-- PARTIE DE Elias -->
 	<div id="news">
 		<h2>
-			News INSERER_NOM !!
+			News Eliaslebg !!
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Le dernier épisode de Game Of Throne a chamboulé la planète, que dis-je ? L'univers tout entier grâce à son incroyable réalisation et surtout à la présence d'acteurs formidables, bourrés de talents (pas que de talents pour certains ;)).
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://www.youtube.com/watch?v=FoGHEsI-ZQE">GOT</a>
 		</h3>
 	</div>
     <!-- FIN PARTIE -->
